rustdocs/errors/rust-bitcoin-units-src-parse_int.rs.txt
error[E0433]: failed to resolve: you might be missing crate `core`
 --> ../rust-bitcoin/units/src/parse_int.rs:5:5
  |
5 | use core::convert::Infallible;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0433]: failed to resolve: you might be missing crate `core`
 --> ../rust-bitcoin/units/src/parse_int.rs:7:5
  |
7 | use core::str::FromStr;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `internals`
 --> ../rust-bitcoin/units/src/parse_int.rs:9:5
  |
9 | use internals::error::InputString;
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
  |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
  |
5 + extern crate internals;
  |

error[E0432]: unresolved import `core`
 --> ../rust-bitcoin/units/src/parse_int.rs:6:5
  |
6 | use core::fmt;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `internals`
  --> ../rust-bitcoin/units/src/parse_int.rs:10:5
   |
10 | use internals::write_err;
   |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
   |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
   |
 5 + extern crate internals;
   |

error[E0432]: unresolved import `impl_parse_str_from_int_infallible`
   --> ../rust-bitcoin/units/src/parse_int.rs:192:16
    |
192 | pub(crate) use impl_parse_str_from_int_infallible;
    |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `impl_parse_str_from_int_infallible` in the root

error[E0432]: unresolved import `impl_parse_str`
   --> ../rust-bitcoin/units/src/parse_int.rs:230:16
    |
230 | pub(crate) use impl_parse_str;
    |                ^^^^^^^^^^^^^^ no `impl_parse_str` in the root

error[E0432]: unresolved import `impl_tryfrom_str`
   --> ../rust-bitcoin/units/src/parse_int.rs:246:16
    |
246 | pub(crate) use impl_tryfrom_str;
    |                ^^^^^^^^^^^^^^^^ no `impl_tryfrom_str` in the root

error[E0405]: cannot find trait `TryFrom` in this scope
  --> ../rust-bitcoin/units/src/parse_int.rs:58:47
   |
58 | ...::ParseIntError> + TryFrom<i8> + Sized + sealed::Sealed
   |                       ^^^^^^^ not found in this scope
   |
   = note: 'std::convert::TryFrom' is included in the prelude starting in Edition 2021
help: consider importing this trait
   |
 5 + use std::convert::TryFrom;
   |

error: aborting due to 9 previous errors

Some errors have detailed explanations: E0405, E0432, E0433.
For more information about an error, try `rustc --explain E0405`.
